# log-os

./: .gitignore  KNOWN_BUGS.md  LICENSE  README.md  REPORT-PHASE2.md  ROADMAP.md  kernel.l0  pyproject.toml  repl.py
.github/workflows/: python-ci.yml
bootstrap/: analyzer.l0  call-graph-builder.l0  evolve-a-sorter.l0  structure-aware-evolver.l0
core/: environment.py  errors.py  evaluators.l0  interpreter.py  kernels.py  orchestrator.l0  orchestrator_ref.py  parser.py  types.py  utils.py
core/lisp/: aware-evaluator.l0
stdlib/: collections.l0  contracts.l0  core.l0  cost-model.l0  evaluation-foundry.l0  multimethods.l0  telemetry.l0  tuning.l0
stdlib/analysis/: benchmark.l0  deep-ast.l0
stdlib/gen-prog/: core.l0
stdlib/math/: beta.l0  random.l0
tests/: conftest.py  load_sample.l0  run_ref.py  sample.l0  test_contracts.l0  test_environment.py  test_evaluation.py  test_foundry.l0  test_interpreter.py  test_multimethods.l0  test_parser.py  test_synapse.l0  test_vulcan.py
