[project]
name = "log-os"
version = "0.0.1"
description = "A self-bootstrapping, reflective programming language and environment."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Log-Os", email = "contact@log-os.ai" },
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools]
packages = ["core"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88